--- a/assistant_config.yml
+++ b/assistant_config.yml
@@ -1,14 +1,14 @@
 typer_assistant:
-  assistant_name: Ada
+  assistant_name: Mary
   human_companion_name: Dan
   ears: realtime-stt
   brain: deepseek-v3 # only deepseek-v3
   voice: elevenlabs # local, elevenlabs
-  elevenlabs_voice: WejK3H1m7MI9CHnIjW9K
+  elevenlabs_voice: pFZP5JQG7iQjIQuC4Bku
 base_assistant:
-  assistant_name: Ada
+  assistant_name: Mary
   human_companion_name: Dan
   ears: realtime-stt
   brain: ollama:phi4 # deepseek-v3, ollama:phi4, ollama:<any installed model>
   voice: local # local, elevenlabs
-  elevenlabs_voice: WejK3H1m7MI9CHnIjW9K
+  elevenlabs_voice: pFZP5JQG7iQjIQuC4Bku
